Fixed nav z-index

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ html, body {
     min-height: 100%; 
 }
 
+nav {
+    z-index: 1;
+    position: relative;
+}
 .nav-left {
     left: 10px;
     position: absolute;
